# ChessC

./: CMakeLists.txt  README.md  makefile
include/: alButtons.h  alImages.h  alMouse.h  alWindow.h  board.h  game.h  pieces.h
src/: board.c  game.c  main.c  pieces.c
src/allegro/: alButtons.c  alImages.c  alMouse.c  alWindow.c
